--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,17 +2,15 @@ spring:
   h2:
     console:
       enabled: true
+      path: /h2
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
+    url: jdbc:h2:file:~/test
     username: sa
-    password: password
-  hibernate:
-    ddl-auto: update
+    password:
+    driverClassName: org.h2.Driver
   jpa:
-    properties:
-      hibernate:
-        show_sql: true
-        use_sql_comments: true
-        format_sql: true
+    hibernate:
+      ddl-auto: update
 
+flight-api:
+  api-url: http://localhost:8080/api/v1
