--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
       ddl-auto: update
 
 flight-api:
-  api-url: http://localhost:8080/api/v1
+  api-url: <insert-api-url-here>
 
 resilience4j:
   ratelimiter:
